Added first section of about

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Learn about our prestigious flying school and our fabulous story.</h3>
                 </div>
             </div>
             <div class="row">
@@ -242,11 +242,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>1983</h4>
+                                    <h4 class="subheading">The Beginning</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">On September 2nd, 1983, our founder James Hopkins decided, after his long career as an RAF pilot to teach the next generation to fly. He started SkyRiders as an attempt to do just this and loves to visit now and again to this day.</p>
                                 </div>
                             </div>
                         </li>
