--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>1983</h4>
+                                    <h4>September 1983</h4>
                                     <h4 class="subheading">The Beginning</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -256,11 +256,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>January 2000</h4>
+                                    <h4 class="subheading">Celebrations</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Celebrating the new millenium, we put on a great show for people to watch; we had planes, fireworks and an assortment of food. This really helped to boost our students and coaches and build the amazing community that we have today.</p>
                                 </div>
                             </div>
                         </li>
