Updated About (Section 3) [No image]

--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>February 2011</h4>
+                                    <h4 class="subheading">Location</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">We purchased our fine location on 12th February a few years ago. Every since, we have attracted many visitors and students who have, later in life, become great pilots for commercial and private planes.</p>
                                 </div>
                             </div>
                         </li>
