--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4 class="subheading">Continuation</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Today we continue to take on more coaches and pupils to continue the great history of SkyRiders.</p>
                                 </div>
                             </div>
                         </li>
@@ -296,7 +296,7 @@
                             <div class="timeline-image">
                                 <h4>Be Part
                                     <br>Of Our
-                                    <br>Story!</h4>
+                                    <br>Store!</h4>
                             </div>
                         </li>
                     </ul>
