Corrected final section of about

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
+                                    <h4>Today</h4>
                                     <h4 class="subheading">Continuation</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -296,7 +296,7 @@
                             <div class="timeline-image">
                                 <h4>Be Part
                                     <br>Of Our
-                                    <br>Store!</h4>
+                                    <br>Story!</h4>
                             </div>
                         </li>
                     </ul>
